ubiquity (1.7.3) UNRELEASED; urgency=low

  [ Mario Limonciello ]
  * Show correct image in ubiquity-mythbuntu.desktop.

 -- Mario Limonciello <superm1@ubuntu.com>  Wed, 19 Dec 2007 00:26:12 -0600

ubiquity (1.7.2) hardy; urgency=low

  [ Evan Dandrea ]
  * XS-Vcs-Bzr is now Vcs-Bzr.
  * Strip out support for creating multiple users in migration-assistant.
  * Save state in between runs of migration-assistant (LP: #151126).
  * Added partman/check.d/03partition_too_small to warn the user when a
    partition isn't large enough to contain the respective part of /rofs
    (LP: #48355).
  * Modified scripts/install.py to handle ENOSPC.
  * Tore out partition_help.  This may be replaced by more detailed help text,
    viewable by pressing a help button.
  * Don't set can_focus on the timezone combo box as it prevents you from
    tabbing back out of it.  Thanks Sebastien (LP: #136665).

  [ Colin Watson ]
  * Copy xserver-xorg/config/display/modes to the installed system before
    reconfiguring usplash (LP: #150930).
  * Update for apt-setup 1:0.31ubuntu1.
  * Update d-i/update-control to work with the new Dpkg::Deps module in
    dpkg-dev 1.14.8.
  * Update partman extensions to cope with changes in partman-base 114
    (/lib/partman/definitions.sh -> /lib/partman/lib/base.sh).
  * Automatic update of included source packages: apt-setup 1:0.31ubuntu2,
    base-installer 1.86ubuntu1, debian-installer-utils 1.50ubuntu1,
    partman-auto 73ubuntu1, partman-base 114ubuntu1, partman-basicmethods
    36, partman-efi 14ubuntu1, partman-partitioning 54ubuntu1.

  [ Mario Limonciello ]
  * Correct a small typo in mythbuntu template. (LP: #155194)
  * Don't allow mythbuntu remote configuration pages to progress
    when "Other Remote" is selected. (LP: #157233)
  * Check for files related to mythbuntu autostart rather than assuming
    they don't already exist. (LP: #173378)
  * Don't allow the user to progress on non mythbuntu master backend roles